src/assets/css/artist-ui.css
/* ... */
.profile-details
  #add-artist-details
  .modal-header
  button
  .close-modal-icon:hover {
  color: var(--orange);
  font-variation-settings: "FILL" 1, "wght" 800, "GRAD" 0, "opsz" 48;
  transition: all 0.7s;
}

/* AddMember.vue & SocialMedia.vue form */
.modal-add-member .member-avatar {
  margin-bottom: 2rem;
}
.modal-add-member .form-group label {
  color: var(--body-text, #2d3748);
  font-size: 1rem;
  font-style: normal;
  font-weight: 600;
  line-height: normal;
  letter-spacing: -0.02rem;
  margin-bottom: 0.3rem;
}
.modal-add-member input[type="file"]::file-selector-button {
  /* padding: .2em .4em; */
  transition: 0.5s;
  border-radius: 11.5rem;
  background-color: #0c0c0c;
  width: 9.5rem;
  height: 9.5rem;
  border: 0;
}
.modal-add-member input[type="file"]::file-selector-button:hover {
  background-color: #ff6b00;
  color: #fff;
}
.modal-add-member .form-group .text-danger {
  white-space: pre;
}
.modal-add-member .upload-img .add-member-default-avatar {
  transition: 0.5s;
  border-radius: 11.5rem;
  width: 9rem;
  height: 9rem;
  border: 0;
}
/* .modal-add-member .form-group, .modal-add-social-media .form-group {
  margin-bottom: .3rem!important;
} */
.modal-add-member .form-group .member-name,
.modal-add-member .form-group select {
  height: 3rem;
  color: #2d3748;
  font-size: 1rem;
  font-weight: 500;
  line-height: 140%;
  letter-spacing: -0.02rem;
}
.modal-add-member .add-member,
.modal-add-social-media .add-social-media {
  color: var(--white);
  font-size: 1.01rem;
  font-weight: 700;
  letter-spacing: -0.025rem;
  padding: 0.9rem 0;
  width: 26.625rem;
  border-radius: 0.3125rem;
  background-color: var(--orange);
  margin: 2rem auto 1rem;
  border: 0;
}
.modal-add-social-media .add-social-media {
  margin: 3rem auto 1rem;
}
.modal-add-member .add-member:hover,
.modal-add-social-media .add-social-media:hover {
  background: var(--btn-hovered);
}
.modal-add-member .upload-img {
  margin: 0rem auto 2.5rem;
  display: flex;
  align-items: center;
}
.modal-add-member .upload-img .label-img {
  position: relative;
  margin: auto;
}
.modal-add-member .upload-img .label-img .camera-inner {
  color: #ffffff;
  background-color: #eaebf1;
  padding: 3rem;
  border-radius: 100%;
  font-size: 3.5rem;
  margin-right: 1.5rem;
  transition: font-variation-setings 0.25s;
  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 48;
}
.modal-add-member .upload-img .label-img .camera {
  position: absolute;
  top: 0;
  left: 0;
  background-color: transparent;
  width: 100%;
  opacity: 0;
}
.modal-add-member .upload-img .label-img .camera input {
  background-color: transparent;
  margin-bottom: 0rem !important;
}
.modal-add-member .upload-img .label-img .camera-outer {
  color: #fff;
  flex-shrink: 0;
  padding: 0.7rem;
  border-radius: 33px;
  background: #ff6b00;
  font-variation-settings: "FILL" 0;
  font-size: 20px;
  position: absolute;
  top: 60%;
  left: 65%;
}
.modal-add-member .form-group,
.modal-add-social-media .form-group {
  margin-bottom: 1.75rem;
}
.modal-add-member .form-group-last,
.modal-add-social-media .form-group-last {
  margin-bottom: 0;
}
.profile-details form .artist-type-error::before {
  content: "The artist type field is required.";
}
.profile-details form .artist-name-error::before {
  content: "The artist name or band field is required.";
}
.profile-details form .street-error::before {
  content: "The street field is required.";
}
.profile-details form .city-error::before {
  content: "The city field is required.";
}
.profile-details form .province-error::before {
  content: "The province field is required.";
}
.modal-add-member .member-name::before {
  content: "The member name field is required.";
}
.modal-add-member .role-error::before {
  content: "The role field is required.";
}

/* ARTIST POST MODAL */

#artistPost .modal-content {
  padding: 2.5rem 2.5rem 3rem;
}
#artistPost .modal-content .modal-header,
#artistPost .modal-body {
  border: 0;
  padding: 0;
}
#artistPost .modal-content .modal-header {
  margin-bottom: 1.5rem;
}
/* #artistPost .modal-body{
  margin-bottom: 3rem;
} */
#artistPost .modal-content .modal-header .btn-close {
  font-size: 0.6rem;
  padding: 0.4rem;
  border: 1px solid #23262f;
  border-radius: 100px;
  color: #23262f;
}
#artistPost .modal-content .modal-header .modal-title {
  color: #23262f;
  font-feature-settings: "clig" off, "liga" off;
  font-size: 1.5rem;
  font-weight: 600;
  line-height: 2rem;
  display: flex;
  align-items: center;
}
#artistPost .modal-body .artist-image {
  margin-bottom: 1.5rem;
}
#artistPost .modal-body .artist-image img {
  width: 4.375rem;
  height: 4.375rem;
  border-radius: 100px;

  margin-right: 0.5rem;
}
#artistPost .modal-body .artist-image .band-name {
  font-size: 1.125rem;
  font-weight: 700;
  margin-bottom: 0;
}
#artistPost .modal-body .form-group {
  margin-bottom: 1.5rem;
}
#artistPost .modal-body .form-group textarea {
  height: 12rem;
  border-radius: 0.625rem;
  resize: none;
  padding: 1.25rem;
}
#artistPost .modal-body .form-group textarea::placeholder {
  color: #73788c;
  font-size: 1rem;
  font-weight: 500;
  line-height: 1.5rem;
}
#artistPost .modal-body .add-post {
  color: var(--black);
  font-size: 1.25rem;
  font-weight: 600;
  margin-bottom: 1.5rem;
}
#artistPost .modal-body .manage-to-post {
  gap: 1.5rem;
  /* margin-bottom: 5rem; */
}
#artistPost .modal-body .manage-to-post .post-icon {
  color: #536471;
  font-size: 2rem;
  padding: 1rem;
  background-color: #efeffc;
  border-radius: 100px;
  margin-right: 0.62rem;
}
#artistPost .modal-body .button-wrapper {
  margin-top: 5rem;
}
#artistPost .modal-body .manage-to-post button {
  color: #8690a2;
  font-size: 1rem;
  font-weight: 600;
  margin-bottom: 0;
  padding: 0;
  border: 0;
  transition: background-color 0.3s ease-in-out;
}

#artistPost .modal-body .manage-to-post .selected {
  color: var(--orange) !important;
}
/* ... */

